# text2sql

./: .gitignore  LICENSE  README.md  pyproject.toml
src/text2sql/: __init__.py  database.py  text2sql.py
src/text2sql/resources/prompts/text2sql/: optimizesql.md  references.md  text2sql.md
src/text2sql/resources/sqls/: ddl_mysql.sql  ddl_postgres.sql
src/text2sql/utils/: ai.py  path.py  strings.py
tests/: test_text2sql.py
