[project]
name = "text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.19",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pymilvus>=2.5.10",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]
