[project]
name = "simple-text2sql"
version = "1.0.1"
description = "A simple implementation of Text2SQL."
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "httpx[socks]>=0.28.1",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.19",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pymilvus>=2.5.10",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
]

[project.urls]
Homepage = "https://github.com/secretpot/text2sql"
Repository = "https://github.com/secretpot/text2sql"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"text2sql" = ["resources/**/*"]
